# burnlens-deschutes

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROMPT_LOG.md  README.md  VERSIONING.md  pyproject.toml
.codex/environments/: geospatial.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  task.yml
burnlens/: __init__.py  access_integrity.py  acquire_cross_event_optical.py  acquire_grandview_background_optical.py  acquire_grandview_optical.py  acquire_green_ridge_background_optical.py  acquire_green_ridge_optical.py  acquire_mtbs_cross_event_reference.py  acquire_optical_pair.py  acquire_petes_lake_optical.py  acquire_petes_lake_replacement_post.py  acquire_provider_package.py  acquire_windigo_optical.py  additional_event_group_plan.py  aoi_finalizer.py  assess_cross_event_feasibility.py  authorize_label_review_reveal.py  build_additional_event_group_plan.py  build_grandview_owner_response_intake.py  build_grandview_owner_review_surface.py  build_grandview_region_proposal.py  build_green_ridge_owner_response_intake.py  build_green_ridge_owner_review_surface.py  build_green_ridge_region_proposal.py  build_label_region_remediation_plan.py  build_label_review_handoff.py  build_label_review_packet.py  build_official_fallback_source_gate.py  build_owner_response_intake.py  build_owner_review_surface.py  build_portfolio_reviewer_experience.py  build_prototype_label_sufficiency.py  build_region_candidate_pilot.py  build_region_owner_response_intake.py  build_region_owner_review_surface.py  build_six_event_dataset_sufficiency.py  build_submission_bundle.py  build_windigo_owner_response_intake.py  build_windigo_owner_review_surface.py  capture_additional_event_group_source.py  (+143 more)
docs/case-study/: BURNLENS_CASE_STUDY.md
docs/devlog/: 2026-07-13-aoi-finalization.md  2026-07-13-asset-access-readiness.md  2026-07-13-goal-activation.md  2026-07-13-paired-intake-transaction.md  2026-07-13-source-metadata-readiness.md  2026-07-13-viirs-access-integrity.md  2026-07-14-authenticated-source-inspection.md  2026-07-14-burn-scar-target-decision.md  2026-07-14-observation-geometry.md  2026-07-14-target-evidence-determinism.md  2026-07-15-burn-scar-target-release.md  2026-07-15-content-registration.md  2026-07-15-cross-event-feasibility.md  2026-07-15-cross-event-label-transfer.md  2026-07-15-five-state-label-proposal.md  2026-07-15-optical-pair-protocol.md  2026-07-16-atomic-reviewer-response-intake.md  2026-07-16-cross-event-source-fitness.md  2026-07-16-dual-lock-custody-readiness.md  2026-07-16-first-reviewer-response-lock.md  2026-07-16-github-backlog-truth.md  2026-07-16-label-review-readiness.md  2026-07-16-live-browser-reviewer-handoff-qa.md  2026-07-16-offline-reviewer-handoff.md  2026-07-16-owner-waiver-reveal-readiness.md  2026-07-16-single-reviewer-reconciliation.md  2026-07-16-topology-stable-label-transfer.md  2026-07-17-current-reference-bundle-fitness.md  2026-07-17-current-reference-bundle-request.md  2026-07-17-current-reference-inventory.md  2026-07-17-official-source-scout.md  2026-07-17-owner-confirmed-review-surface.md  2026-07-18-label-region-remediation-plan.md  2026-07-18-owner-response-intake.md  2026-07-18-prototype-label-sufficiency.md  2026-07-18-region-candidate-pilot.md  2026-07-18-region-owner-review-surface.md  2026-07-19-additional-event-groups.md  2026-07-19-green-ridge-reference-fitness.md  2026-07-19-green-ridge-source-fitness.md  (+17 more)
docs/governance/: BURNLENS_EXECUTION_GOAL.md  CHECKPOINT_POLICY.md  GITHUB_BACKLOG_RECONCILIATION.md
docs/objective-one/: DATA_PREMISE.md  (+11 more)
portfolio/: BURNLENS-PORTFOLIO-REVIEWER-EXPERIENCE-2026-001.html  BURNLENS-PORTFOLIO-REVIEWER-EXPERIENCE-2026-001.json  README.md
records/: PROMPT_BUILD_LOG.md
scripts/: invoke_authenticated_intake.ps1  invoke_cross_event_optical_intake.ps1  invoke_grandview_background_optical_intake.ps1  invoke_green_ridge_background_optical_intake.ps1  invoke_green_ridge_optical_intake.ps1  invoke_optical_pair_intake.ps1  invoke_petes_lake_optical_intake.ps1  invoke_petes_lake_replacement_post_intake.ps1  invoke_windigo_optical_intake.ps1  setup_worktree.ps1  verify_environment.py
templates/: ACCESS_LOG_TEMPLATE.md  AOI_RECORD_TEMPLATE.md  CLAIM_EVIDENCE_LINK_TEMPLATE.md  CLAIM_REGISTER_ENTRY_TEMPLATE.md  CODEX_TASK_PACKET.md  CODEX_TASK_TEMPLATE.md  FORMAT_CRS_PRECHECK_TEMPLATE.md  MODEL_CARD_TEMPLATE.md  NO_GO_SOURCE_NOTE_TEMPLATE.md  PROMPT_LOG_ENTRY.md  PROVENANCE_MANIFEST_TEMPLATE.json  RELEASE_NOTE_TEMPLATE.md  RUN_MANIFEST_TEMPLATE.json  SOURCE_RECORD_TEMPLATE.md  TRACEABILITY_RECORD_TEMPLATE.md
tests/: test_access_integrity.py  test_additional_event_group_plan.py  test_aoi_finalizer.py  test_content_registration.py  test_cross_event_feasibility.py  test_cross_event_label_transfer.py  test_cross_event_optical_contract.py  test_cross_event_source_fitness.py  test_current_reference_bundle_fitness.py  test_current_reference_bundle_request.py  test_current_reference_inventory.py  test_environment_profiles.py  test_grandview_background_evidence.py  test_grandview_background_optical_contract.py  test_grandview_optical_contract.py  test_grandview_owner_response_intake.py  test_grandview_owner_response_lock.py  test_grandview_owner_review_surface.py  test_grandview_reference_delivery.py  test_grandview_reference_fitness.py  test_grandview_reference_request.py  test_grandview_region_proposal.py  test_grandview_source_fitness.py  test_green_ridge_background_evidence.py  test_green_ridge_background_optical_contract.py  test_green_ridge_optical_contract.py  test_green_ridge_owner_response_intake.py  test_green_ridge_owner_review_surface.py  test_green_ridge_reference_delivery.py  test_green_ridge_reference_fitness.py  test_green_ridge_reference_request.py  test_green_ridge_region_proposal.py  test_green_ridge_source_fitness.py  test_label_proposal.py  test_label_region_remediation_plan.py  test_label_review_browser_qa.py  test_label_review_dual_lock_qa.py  test_label_review_handoff.py  test_label_review_packet.py  test_label_review_response_intake.py  (+44 more)
(+915 files in other folders)
