[build-system]
requires = ["setuptools>=82,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "burnlens-deschutes"
version = "0.16.0"
description = "Experimental, portfolio-first BurnLens CV-to-GEOINT evidence tooling"
requires-python = ">=3.11"
dependencies = [
  "blake3==1.0.9",
  "h5py==3.16.0",
  "numpy==2.5.1",
  "Pillow==12.2.0",
  "rasterio==1.5.0",
]

[project.scripts]
burnlens-viirs-access-precheck = "burnlens.viirs_access_precheck:main"
burnlens-render-access-report = "burnlens.render_access_report:main"
burnlens-finalize-aoi = "burnlens.finalize_aoi:main"
burnlens-rehearse-paired-intake = "burnlens.rehearse_paired_intake:main"
burnlens-acquire-provider-package = "burnlens.acquire_provider_package:main"
burnlens-inspect-source-package = "burnlens.inspect_source_package:main"
burnlens-screen-observation-geometry = "burnlens.screen_observation_geometry:main"
burnlens-record-target-decision = "burnlens.record_target_decision:main"
burnlens-inspect-optical-pair = "burnlens.inspect_optical_pair:main"
burnlens-measure-content-registration = "burnlens.measure_content_registration:main"
burnlens-propose-burn-scar-labels = "burnlens.propose_burn_scar_labels:main"
burnlens-verify-label-proposal = "burnlens.verify_label_proposal:main"
burnlens-capture-cross-event-source = "burnlens.capture_cross_event_source:main"
burnlens-assess-cross-event-feasibility = "burnlens.assess_cross_event_feasibility:main"
burnlens-acquire-cross-event-optical = "burnlens.acquire_cross_event_optical:main"
burnlens-inspect-cross-event-sources = "burnlens.inspect_cross_event_sources:main"
burnlens-acquire-mtbs-cross-event-reference = "burnlens.acquire_mtbs_cross_event_reference:main"
burnlens-propose-cross-event-labels = "burnlens.propose_cross_event_labels:main"
burnlens-verify-cross-event-label-transfer = "burnlens.verify_cross_event_label_transfer:main"
burnlens-build-label-review-packet = "burnlens.build_label_review_packet:main"
burnlens-run-label-review-packet-qa = "burnlens.run_label_review_packet_qa:main"
burnlens-build-label-review-handoff = "burnlens.build_label_review_handoff:main"
burnlens-verify-label-review-handoff = "burnlens.verify_label_review_handoff:main"
burnlens-lock-label-review-response = "burnlens.lock_label_review_response:main"
burnlens-run-label-review-browser-qa = "burnlens.run_label_review_browser_qa:main"
burnlens-run-label-review-response-lock-qa = "burnlens.run_label_review_response_lock_qa:main"

[tool.setuptools]
packages = ["burnlens"]

[tool.setuptools.package-data]
burnlens = ["*.mjs"]
