[build-system]
requires = ["setuptools>=82,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "burnlens-deschutes"
version = "0.46.0"
description = "Experimental, portfolio-first BurnLens CV-to-GEOINT evidence tooling"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "blake3==1.0.9",
  "h5py==3.16.0",
  "numpy==2.5.1",
  "Pillow==12.3.0",
  "rasterio==1.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]
geo-research = [
  "boto3==1.43.52",
  "geopandas==1.1.4",
  "pyogrio==0.13.0",
  "pyproj==3.7.2",
  "pystac-client==0.9.0",
  "rioxarray==0.22.0",
  "shapely==2.1.2",
  "xarray==2026.7.0",
]

[project.scripts]
burnlens-viirs-access-precheck = "burnlens.viirs_access_precheck:main"
burnlens-render-access-report = "burnlens.render_access_report:main"
burnlens-finalize-aoi = "burnlens.finalize_aoi:main"
burnlens-rehearse-paired-intake = "burnlens.rehearse_paired_intake:main"
burnlens-acquire-provider-package = "burnlens.acquire_provider_package:main"
burnlens-inspect-source-package = "burnlens.inspect_source_package:main"
burnlens-screen-observation-geometry = "burnlens.screen_observation_geometry:main"
burnlens-record-target-decision = "burnlens.record_target_decision:main"
burnlens-inspect-optical-pair = "burnlens.inspect_optical_pair:main"
burnlens-measure-content-registration = "burnlens.measure_content_registration:main"
burnlens-propose-burn-scar-labels = "burnlens.propose_burn_scar_labels:main"
burnlens-verify-label-proposal = "burnlens.verify_label_proposal:main"
burnlens-capture-cross-event-source = "burnlens.capture_cross_event_source:main"
burnlens-assess-cross-event-feasibility = "burnlens.assess_cross_event_feasibility:main"
burnlens-acquire-cross-event-optical = "burnlens.acquire_cross_event_optical:main"
burnlens-inspect-cross-event-sources = "burnlens.inspect_cross_event_sources:main"
burnlens-acquire-mtbs-cross-event-reference = "burnlens.acquire_mtbs_cross_event_reference:main"
burnlens-propose-cross-event-labels = "burnlens.propose_cross_event_labels:main"
burnlens-verify-cross-event-label-transfer = "burnlens.verify_cross_event_label_transfer:main"
burnlens-build-label-review-packet = "burnlens.build_label_review_packet:main"
burnlens-run-label-review-packet-qa = "burnlens.run_label_review_packet_qa:main"
burnlens-build-label-review-handoff = "burnlens.build_label_review_handoff:main"
burnlens-verify-label-review-handoff = "burnlens.verify_label_review_handoff:main"
burnlens-lock-label-review-response = "burnlens.lock_label_review_response:main"
burnlens-run-label-review-browser-qa = "burnlens.run_label_review_browser_qa:main"
burnlens-run-label-review-response-lock-qa = "burnlens.run_label_review_response_lock_qa:main"
burnlens-run-label-review-dual-lock-qa = "burnlens.run_label_review_dual_lock_qa:main"
burnlens-intake-label-review-response = "burnlens.intake_label_review_response:main"
burnlens-run-label-review-response-intake-qa = "burnlens.run_label_review_response_intake_qa:main"
burnlens-authorize-label-review-reveal = "burnlens.authorize_label_review_reveal:main"
burnlens-run-owner-waiver-reveal-readiness-qa = "burnlens.run_owner_waiver_reveal_readiness_qa:main"
burnlens-run-single-reviewer-reconciliation = "burnlens.run_single_reviewer_reconciliation:main"
burnlens-run-single-reviewer-reconciliation-qa = "burnlens.run_single_reviewer_reconciliation_qa:main"
burnlens-capture-current-reference-inventory = "burnlens.capture_current_reference_inventory:main"
burnlens-capture-current-reference-bundle-request = "burnlens.capture_current_reference_bundle_request:main"
burnlens-capture-official-source-scout = "burnlens.capture_official_source_scout:main"
burnlens-inspect-current-reference-bundles = "burnlens.inspect_current_reference_bundles:main"
burnlens-build-owner-review-surface = "burnlens.build_owner_review_surface:main"
burnlens-lock-owner-review-response = "burnlens.lock_owner_review_response:main"
burnlens-build-owner-response-intake = "burnlens.build_owner_response_intake:main"
burnlens-build-prototype-label-sufficiency = "burnlens.build_prototype_label_sufficiency:main"
burnlens-build-label-region-remediation-plan = "burnlens.build_label_region_remediation_plan:main"
burnlens-build-region-candidate-pilot = "burnlens.build_region_candidate_pilot:main"
burnlens-build-region-owner-review-surface = "burnlens.build_region_owner_review_surface:main"
burnlens-intake-region-owner-response = "burnlens.intake_region_owner_response:main"
burnlens-build-region-owner-response-intake = "burnlens.build_region_owner_response_intake:main"
burnlens-capture-additional-event-group-source = "burnlens.capture_additional_event_group_source:main"
burnlens-build-additional-event-group-plan = "burnlens.build_additional_event_group_plan:main"
burnlens-acquire-green-ridge-optical = "burnlens.acquire_green_ridge_optical:main"
burnlens-acquire-grandview-optical = "burnlens.acquire_grandview_optical:main"
burnlens-inspect-grandview-sources = "burnlens.inspect_grandview_sources:main"
burnlens-inspect-green-ridge-sources = "burnlens.inspect_green_ridge_sources:main"
burnlens-request-green-ridge-reference = "burnlens.request_green_ridge_reference:main"
burnlens-request-grandview-reference = "burnlens.request_grandview_reference:main"
burnlens-preflight-grandview-reference-delivery = "burnlens.preflight_grandview_reference_delivery:main"
burnlens-inspect-grandview-references = "burnlens.inspect_grandview_references:main"
burnlens-preflight-green-ridge-reference-delivery = "burnlens.preflight_green_ridge_reference_delivery:main"
burnlens-inspect-green-ridge-references = "burnlens.inspect_green_ridge_references:main"
burnlens-acquire-green-ridge-background-optical = "burnlens.acquire_green_ridge_background_optical:main"
burnlens-inspect-green-ridge-background-evidence = "burnlens.inspect_green_ridge_background_evidence:main"
burnlens-acquire-grandview-background-optical = "burnlens.acquire_grandview_background_optical:main"
burnlens-inspect-grandview-background-evidence = "burnlens.inspect_grandview_background_evidence:main"
burnlens-build-green-ridge-region-proposal = "burnlens.build_green_ridge_region_proposal:main"
burnlens-build-grandview-region-proposal = "burnlens.build_grandview_region_proposal:main"
burnlens-build-green-ridge-owner-review-surface = "burnlens.build_green_ridge_owner_review_surface:main"
burnlens-build-grandview-owner-review-surface = "burnlens.build_grandview_owner_review_surface:main"
burnlens-lock-grandview-owner-response = "burnlens.lock_grandview_owner_response:main"
burnlens-build-grandview-owner-response-intake = "burnlens.build_grandview_owner_response_intake:main"
burnlens-intake-green-ridge-owner-response = "burnlens.intake_green_ridge_owner_response:main"
burnlens-build-green-ridge-owner-response-intake = "burnlens.build_green_ridge_owner_response_intake:main"
burnlens-inspect-petes-lake-sources = "burnlens.inspect_petes_lake_source_fitness:main"
burnlens-inspect-petes-lake-replacement-sources = "burnlens.inspect_petes_lake_replacement_source_fitness:main"
burnlens-capture-petes-lake-replacement-post = "burnlens.capture_petes_lake_replacement_post:main"
burnlens-acquire-petes-lake-replacement-post = "burnlens.acquire_petes_lake_replacement_post:main"
burnlens-request-petes-lake-reference = "burnlens.request_petes_lake_reference:main"
burnlens-preflight-petes-lake-reference-delivery = "burnlens.preflight_petes_lake_reference_delivery:main"
burnlens-capture-petes-lake-reference-delivery = "burnlens.capture_petes_lake_reference_delivery:main"
burnlens-inspect-petes-lake-reference-native-contract = "burnlens.inspect_petes_lake_reference_native_contract:main"
burnlens-capture-petes-lake-wetland-custody = "burnlens.capture_petes_lake_wetland_custody:main"
burnlens-inspect-petes-lake-reference-fitness = "burnlens.inspect_petes_lake_reference_fitness:main"
burnlens-serve-review-surface = "burnlens.serve_review_surface:main"
burnlens-build-official-fallback-source-gate = "burnlens.build_official_fallback_source_gate:main"
burnlens-inspect-windigo-source-fitness = "burnlens.windigo_source_fitness:main"
burnlens-build-windigo-region-proposal = "burnlens.windigo_region_proposal:main"
burnlens-build-windigo-owner-review-surface = "burnlens.build_windigo_owner_review_surface:main"
burnlens-build-windigo-owner-response-intake = "burnlens.build_windigo_owner_response_intake:main"

[tool.setuptools]
packages = ["burnlens"]

[tool.setuptools.package-data]
burnlens = ["*.mjs"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
required-version = ">=0.10.7,<0.11"
